[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Area2D scenes/Portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/camera/playerCam.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ruletiles/Spikes.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/tilemaps/3DTile1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/hud/switchhud.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/events/Dialogue/DialogueBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/menus/Pause_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/levels scripts/Level2.gd" type="Script" id=10]
[ext_resource path="res://assets/ruletiles/Button.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Drone.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/environment/background/City background orange version.png" type="Texture" id=13]
[ext_resource path="res://assets/OST/Nivel 2.ogg" type="AudioStream" id=14]

[node name="Level2" type="Node2D"]
script = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -40 )

[node name="Camera2D" parent="Player" instance=ExtResource( 2 )]
current = true
limit_left = -928
limit_top = -544
limit_right = 832
limit_bottom = 224

[node name="ParallaxBackground" type="ParallaxBackground" parent="Player"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Player/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="Sprite" parent="Player/ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="Tiles" type="Node" parent="."]

[node name="Blue" type="Node" parent="Tiles"]

[node name="Front" parent="Tiles/Blue" instance=ExtResource( 5 )]
modulate = Color( 0, 0.972549, 1, 1 )

[node name="Back" parent="Tiles/Blue" instance=ExtResource( 5 )]
modulate = Color( 0, 0.972549, 1, 1 )
collision_layer = 0
collision_mask = 0

[node name="Spikes" parent="Tiles/Blue" instance=ExtResource( 4 )]
modulate = Color( 0, 0.972549, 1, 1 )
collision_layer = 1
collision_mask = 1

[node name="AppearTile" parent="Tiles/Blue" instance=ExtResource( 8 )]
modulate = Color( 0, 0.972549, 1, 1 )
collision_layer = 0
collision_mask = 0

[node name="Orange" type="Node" parent="Tiles"]

[node name="Front" parent="Tiles/Orange" instance=ExtResource( 5 )]
modulate = Color( 1, 0.529412, 0, 1 )
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( -1048605, 1, 65536, -1048604, 1, 65540, -1048603, 1, 65540, -1048602, 1, 65540, -1048601, 1, 65540, -1048600, 1, 65540, -1048599, 1, 65540, -1048598, 1, 65540, -1048597, 1, 65540, -1048596, 1, 65540, -1048595, 1, 65540, -1048594, 1, 65540, -1048593, 1, 65540, -1048592, 1, 65540, -1048591, 1, 65540, -1048590, 1, 65540, -1048589, 1, 65540, -1048588, 1, 65540, -1048587, 1, 65540, -1048586, 1, 65540, -1048585, 1, 65540, -1048584, 1, 65540, -1048583, 1, 65540, -1048582, 1, 65540, -1048581, 1, 65540, -1048580, 1, 65540, -1048579, 1, 65540, -1048578, 1, 65540, -1048577, 1, 65540, -1114112, 1, 65540, -1114111, 1, 65540, -1114110, 1, 65540, -1114109, 1, 65540, -1114108, 1, 65540, -1114107, 1, 65540, -1114106, 1, 65540, -1114105, 1, 65540, -1114104, 1, 65540, -1114103, 1, 65540, -1114102, 1, 65540, -1114101, 1, 65540, -1114100, 1, 65540, -1114099, 1, 65540, -1114098, 1, 65540, -1114097, 1, 65540, -1114096, 1, 65540, -1114095, 1, 65540, -1114094, 1, 65540, -1114093, 1, 65540, -1114092, 1, 65540, -1114091, 1, 65540, -1114090, 1, 65540, -1114089, 1, 65540, -1114088, 1, 65540, -1114087, 1, 65539, -983069, 1, 65541, -983068, 1, 262146, -983067, 1, 262146, -983066, 1, 262146, -983065, 1, 262146, -983064, 1, 262146, -983063, 1, 262146, -983062, 1, 262146, -983061, 1, 262146, -983060, 1, 262146, -983059, 1, 262146, -983058, 1, 262146, -983057, 1, 262146, -983056, 1, 262146, -983055, 1, 262146, -983054, 1, 131076, -983053, 1, 65542, -983052, 1, 65542, -983051, 1, 65542, -983050, 1, 65542, -983049, 1, 65542, -983048, 1, 65542, -983047, 1, 65542, -983046, 1, 65542, -983045, 1, 131075, -983044, 1, 262146, -983043, 1, 262146, -983042, 1, 262146, -983041, 1, 262146, -1048576, 1, 262146, -1048575, 1, 262146, -1048574, 1, 262146, -1048573, 1, 262146, -1048572, 1, 262146, -1048571, 1, 262146, -1048570, 1, 262146, -1048569, 1, 262146, -1048568, 1, 262146, -1048567, 1, 262146, -1048566, 1, 262146, -1048565, 1, 262146, -1048564, 1, 262146, -1048563, 1, 262146, -1048562, 1, 262146, -1048561, 1, 262146, -1048560, 1, 262146, -1048559, 1, 262146, -1048558, 1, 262146, -1048557, 1, 262146, -1048556, 1, 262146, -1048555, 1, 262146, -1048554, 1, 262146, -1048553, 1, 262146, -1048552, 1, 262146, -1048551, 1, 131072, -917533, 1, 65541, -917532, 1, 262146, -917531, 1, 262146, -917530, 1, 262146, -917529, 1, 262146, -917528, 1, 262146, -917527, 1, 262146, -917526, 1, 262146, -917525, 1, 262146, -917524, 1, 262146, -917523, 1, 262146, -917522, 1, 262146, -917521, 1, 262146, -917520, 1, 262146, -917519, 1, 262146, -917518, 1, 131072, -917509, 1, 65537, -917508, 1, 65542, -917507, 1, 65542, -917506, 1, 65542, -917505, 1, 65542, -983040, 1, 65542, -983039, 1, 65542, -983038, 1, 65542, -983037, 1, 131075, -983036, 1, 262146, -983035, 1, 131076, -983034, 1, 65542, -983033, 1, 65542, -983032, 1, 65542, -983031, 1, 65542, -983030, 1, 65542, -983029, 1, 65542, -983028, 1, 65542, -983027, 1, 65542, -983026, 1, 65542, -983025, 1, 65542, -983024, 1, 65542, -983023, 1, 65542, -983022, 1, 65542, -983021, 1, 65542, -983020, 1, 131075, -983019, 1, 262146, -983018, 1, 262146, -983017, 1, 262146, -983016, 1, 262146, -983015, 1, 131072, -851997, 1, 65541, -851996, 1, 262146, -851995, 1, 262146, -851994, 1, 262146, -851993, 1, 262146, -851992, 1, 262146, -851991, 1, 262146, -851990, 1, 262146, -851989, 1, 262146, -851988, 1, 262146, -851987, 1, 262146, -851986, 1, 262146, -851985, 1, 262146, -851984, 1, 262146, -851983, 1, 262146, -851982, 1, 131072, -917501, 1, 65541, -917500, 1, 262146, -917499, 1, 131072, -917484, 1, 65541, -917483, 1, 262146, -917482, 1, 262146, -917481, 1, 262146, -917480, 1, 262146, -917479, 1, 131072, -786461, 1, 65541, -786460, 1, 262146, -786459, 1, 262146, -786458, 1, 262146, -786457, 1, 262146, -786456, 1, 262146, -786455, 1, 262146, -786454, 1, 262146, -786453, 1, 262146, -786452, 1, 262146, -786451, 1, 262146, -786450, 1, 262146, -786449, 1, 262146, -786448, 1, 262146, -786447, 1, 262146, -786446, 1, 131072, -851965, 1, 65541, -851964, 1, 262146, -851963, 1, 131072, -851948, 1, 65541, -851947, 1, 262146, -851946, 1, 262146, -851945, 1, 262146, -851944, 1, 262146, -851943, 1, 131072, -720925, 1, 65541, -720924, 1, 262146, -720923, 1, 262146, -720922, 1, 262146, -720921, 1, 262146, -720920, 1, 262146, -720919, 1, 262146, -720918, 1, 262146, -720917, 1, 262146, -720916, 1, 262146, -720915, 1, 262146, -720914, 1, 262146, -720913, 1, 262146, -720912, 1, 262146, -720911, 1, 262146, -720910, 1, 131072, -786429, 1, 65541, -786428, 1, 262146, -786427, 1, 131072, -786412, 1, 65541, -786411, 1, 262146, -786410, 1, 262146, -786409, 1, 262146, -786408, 1, 262146, -786407, 1, 131072, -655389, 1, 65541, -655388, 1, 262146, -655387, 1, 262146, -655386, 1, 262146, -655385, 1, 262146, -655384, 1, 262146, -655383, 1, 262146, -655382, 1, 262146, -655381, 1, 262146, -655380, 1, 262146, -655379, 1, 262146, -655378, 1, 262146, -655377, 1, 262146, -655376, 1, 262146, -655375, 1, 262146, -655374, 1, 131072, -720893, 1, 65541, -720892, 1, 262146, -720891, 1, 131072, -720876, 1, 65541, -720875, 1, 262146, -720874, 1, 262146, -720873, 1, 262146, -720872, 1, 262146, -720871, 1, 131072, -589853, 1, 65541, -589852, 1, 262146, -589851, 1, 262146, -589850, 1, 131076, -589849, 1, 65542, -589848, 1, 65542, -589847, 1, 65542, -589846, 1, 65542, -589845, 1, 131075, -589844, 1, 262146, -589843, 1, 131076, -589842, 1, 65542, -589841, 1, 65542, -589840, 1, 65542, -589839, 1, 65542, -589838, 1, 65538, -655357, 1, 65541, -655356, 1, 262146, -655355, 1, 131072, -655340, 1, 65541, -655339, 1, 262146, -655338, 1, 262146, -655337, 1, 262146, -655336, 1, 262146, -655335, 1, 131072, -524317, 1, 65541, -524316, 1, 262146, -524315, 1, 262146, -524314, 1, 131072, -524309, 1, 65537, -524308, 1, 65542, -524307, 1, 65538, -524293, 1, 65536, -524292, 1, 65540, -524291, 1, 65540, -524290, 1, 65540, -524289, 1, 65540, -589824, 1, 65540, -589823, 1, 65540, -589822, 1, 65540, -589821, 1, 131074, -589820, 1, 262146, -589819, 1, 131073, -589818, 1, 65540, -589817, 1, 65540, -589816, 1, 65540, -589815, 1, 65540, -589814, 1, 65540, -589813, 1, 65540, -589812, 1, 65540, -589811, 1, 65540, -589810, 1, 65539, -589804, 1, 65541, -589803, 1, 262146, -589802, 1, 262146, -589801, 1, 262146, -589800, 1, 262146, -589799, 1, 131072, -458781, 1, 65541, -458780, 1, 262146, -458779, 1, 262146, -458778, 1, 131072, -458757, 1, 65541, -458756, 1, 262146, -458755, 1, 262146, -458754, 1, 262146, -458753, 1, 262146, -524288, 1, 262146, -524287, 1, 262146, -524286, 1, 262146, -524285, 1, 262146, -524284, 1, 262146, -524283, 1, 262146, -524282, 1, 262146, -524281, 1, 262146, -524280, 1, 262146, -524279, 1, 262146, -524278, 1, 262146, -524277, 1, 262146, -524276, 1, 262146, -524275, 1, 262146, -524274, 1, 131072, -524268, 1, 65541, -524267, 1, 262146, -524266, 1, 262146, -524265, 1, 262146, -524264, 1, 262146, -524263, 1, 131072, -393245, 1, 65541, -393244, 1, 131076, -393243, 1, 65542, -393242, 1, 65538, -393221, 1, 65541, -393220, 1, 262146, -393219, 1, 262146, -393218, 1, 262146, -393217, 1, 262146, -458752, 1, 262146, -458751, 1, 262146, -458750, 1, 262146, -458749, 1, 262146, -458748, 1, 262146, -458747, 1, 262146, -458746, 1, 262146, -458745, 1, 262146, -458744, 1, 262146, -458743, 1, 262146, -458742, 1, 262146, -458741, 1, 262146, -458740, 1, 262146, -458739, 1, 262146, -458738, 1, 131072, -458732, 1, 65541, -458731, 1, 262146, -458730, 1, 262146, -458729, 1, 262146, -458728, 1, 262146, -458727, 1, 131072, -327709, 1, 65541, -327708, 1, 131072, -327685, 1, 65537, -327684, 1, 65542, -327683, 1, 65542, -327682, 1, 65542, -327681, 1, 65542, -393216, 1, 65542, -393215, 1, 65542, -393214, 1, 65542, -393213, 1, 65542, -393212, 1, 65542, -393211, 1, 65542, -393210, 1, 65542, -393209, 1, 65542, -393208, 1, 65542, -393207, 1, 65542, -393206, 1, 131075, -393205, 1, 262146, -393204, 1, 262146, -393203, 1, 262146, -393202, 1, 131072, -393196, 1, 65541, -393195, 1, 262146, -393194, 1, 262146, -393193, 1, 262146, -393192, 1, 262146, -393191, 1, 131072, -262173, 1, 65541, -262172, 1, 131072, -262165, 1, 65536, -262164, 1, 65540, -262163, 1, 65539, -327670, 1, 65541, -327669, 1, 262146, -327668, 1, 262146, -327667, 1, 262146, -327666, 1, 131072, -327660, 1, 65541, -327659, 1, 262146, -327658, 1, 262146, -327657, 1, 262146, -327656, 1, 262146, -327655, 1, 131072, -196637, 1, 65541, -196636, 1, 131072, -196629, 1, 65541, -196628, 1, 262146, -196627, 1, 131073, -196626, 1, 65540, -196625, 1, 65540, -196624, 1, 65540, -196623, 1, 65540, -196622, 1, 65540, -196621, 1, 65539, -262134, 1, 65537, -262133, 1, 65542, -262132, 1, 65542, -262131, 1, 65542, -262130, 1, 65538, -262124, 1, 65541, -262123, 1, 262146, -262122, 1, 262146, -262121, 1, 262146, -262120, 1, 262146, -262119, 1, 131072, -131101, 1, 65541, -131100, 1, 131072, -131093, 1, 65541, -131092, 1, 262146, -131091, 1, 262146, -131090, 1, 262146, -131089, 1, 262146, -131088, 1, 262146, -131087, 1, 262146, -131086, 1, 262146, -131085, 1, 131072, -196588, 1, 65541, -196587, 1, 262146, -196586, 1, 262146, -196585, 1, 262146, -196584, 1, 262146, -196583, 1, 131072, -65565, 1, 65541, -65564, 1, 131072, -65557, 1, 65541, -65556, 1, 262146, -65555, 1, 131076, -65554, 1, 65542, -65553, 1, 65542, -65552, 1, 65542, -65551, 1, 65542, -65550, 1, 65542, -65549, 1, 65538, -131052, 1, 65541, -131051, 1, 262146, -131050, 1, 262146, -131049, 1, 262146, -131048, 1, 262146, -131047, 1, 131072, -29, 1, 65541, -28, 1, 131073, -27, 1, 65540, -26, 1, 65539, -21, 1, 65537, -20, 1, 65542, -19, 1, 65538, -65516, 1, 65541, -65515, 1, 262146, -65514, 1, 262146, -65513, 1, 262146, -65512, 1, 262146, -65511, 1, 131072, 65507, 1, 65541, 65508, 1, 262146, 65509, 1, 262146, 65510, 1, 131072, 65531, 1, 65536, 65532, 1, 65540, 65533, 1, 65540, 65534, 1, 65540, 65535, 1, 65540, 0, 1, 65540, 1, 1, 65540, 2, 1, 65540, 3, 1, 65540, 4, 1, 65539, 20, 1, 65541, 21, 1, 262146, 22, 1, 262146, 23, 1, 262146, 24, 1, 262146, 25, 1, 131072, 131043, 1, 65541, 131044, 1, 262146, 131045, 1, 262146, 131046, 1, 131072, 131067, 1, 65541, 131068, 1, 262146, 131069, 1, 262146, 131070, 1, 262146, 131071, 1, 262146, 65536, 1, 262146, 65537, 1, 262146, 65538, 1, 262146, 65539, 1, 262146, 65540, 1, 131072, 65546, 1, 4, 65550, 1, 4, 65556, 1, 65541, 65557, 1, 262146, 65558, 1, 262146, 65559, 1, 262146, 65560, 1, 262146, 65561, 1, 131072, 196579, 1, 65541, 196580, 1, 262146, 196581, 1, 262146, 196582, 1, 131072, 196603, 1, 65541, 196604, 1, 262146, 196605, 1, 262146, 196606, 1, 262146, 196607, 1, 262146, 131072, 1, 262146, 131073, 1, 262146, 131074, 1, 262146, 131075, 1, 262146, 131076, 1, 131072, 131082, 1, 393217, 131083, 1, 65540, 131084, 1, 65540, 131085, 1, 65540, 131086, 1, 131077, 131087, 1, 65540, 131088, 1, 65540, 131089, 1, 65540, 131090, 1, 65540, 131091, 1, 65540, 131092, 1, 131074, 131093, 1, 262146, 131094, 1, 262146, 131095, 1, 262146, 131096, 1, 262146, 131097, 1, 131072, 262115, 1, 65541, 262116, 1, 262146, 262117, 1, 262146, 262118, 1, 131072, 262123, 1, 65536, 262124, 1, 65540, 262125, 1, 65539, 262139, 1, 65541, 262140, 1, 262146, 262141, 1, 262146, 262142, 1, 262146, 262143, 1, 262146, 196608, 1, 262146, 196609, 1, 262146, 196610, 1, 262146, 196611, 1, 262146, 196612, 1, 131072, 196618, 1, 65541, 196619, 1, 262146, 196620, 1, 262146, 196621, 1, 262146, 196622, 1, 262146, 196623, 1, 262146, 196624, 1, 262146, 196625, 1, 262146, 196626, 1, 262146, 196627, 1, 262146, 196628, 1, 262146, 196629, 1, 262146, 196630, 1, 262146, 196631, 1, 262146, 196632, 1, 262146, 196633, 1, 131072, 327651, 1, 65541, 327652, 1, 262146, 327653, 1, 262146, 327654, 1, 131072, 327659, 1, 65541, 327660, 1, 262146, 327661, 1, 131073, 327662, 1, 65540, 327663, 1, 65540, 327664, 1, 65540, 327665, 1, 65540, 327666, 1, 65540, 327667, 1, 65539, 327675, 1, 65541, 327676, 1, 262146, 327677, 1, 262146, 327678, 1, 262146, 327679, 1, 262146, 262144, 1, 262146, 262145, 1, 262146, 262146, 1, 262146, 262147, 1, 262146, 262148, 1, 131072, 262154, 1, 65541, 262155, 1, 262146, 262156, 1, 262146, 262157, 1, 262146, 262158, 1, 262146, 262159, 1, 262146, 262160, 1, 262146, 262161, 1, 262146, 262162, 1, 262146, 262163, 1, 262146, 262164, 1, 262146, 262165, 1, 262146, 262166, 1, 262146, 262167, 1, 262146, 262168, 1, 262146, 262169, 1, 131072, 393187, 1, 65541, 393188, 1, 262146, 393189, 1, 262146, 393190, 1, 131072, 393195, 1, 65541, 393196, 1, 262146, 393197, 1, 262146, 393198, 1, 262146, 393199, 1, 262146, 393200, 1, 262146, 393201, 1, 262146, 393202, 1, 262146, 393203, 1, 131072, 393211, 1, 65541, 393212, 1, 262146, 393213, 1, 262146, 393214, 1, 262146, 393215, 1, 262146, 327680, 1, 262146, 327681, 1, 262146, 327682, 1, 262146, 327683, 1, 262146, 327684, 1, 131072, 327690, 1, 65541, 327691, 1, 262146, 327692, 1, 262146, 327693, 1, 262146, 327694, 1, 262146, 327695, 1, 262146, 327696, 1, 262146, 327697, 1, 262146, 327698, 1, 262146, 327699, 1, 262146, 327700, 1, 262146, 327701, 1, 262146, 327702, 1, 262146, 327703, 1, 262146, 327704, 1, 262146, 327705, 1, 131072, 458723, 1, 65537, 458724, 1, 65542, 458725, 1, 65542, 458726, 1, 65538, 458731, 1, 65537, 458732, 1, 65542, 458733, 1, 65542, 458734, 1, 65542, 458735, 1, 65542, 458736, 1, 65542, 458737, 1, 65542, 458738, 1, 65542, 458739, 1, 65538, 458747, 1, 65537, 458748, 1, 65542, 458749, 1, 65542, 458750, 1, 65542, 458751, 1, 65542, 393216, 1, 65542, 393217, 1, 65542, 393218, 1, 65542, 393219, 1, 65542, 393220, 1, 65538, 393226, 1, 65537, 393227, 1, 65542, 393228, 1, 65542, 393229, 1, 65542, 393230, 1, 65542, 393231, 1, 65542, 393232, 1, 65542, 393233, 1, 65542, 393234, 1, 65542, 393235, 1, 65542, 393236, 1, 65542, 393237, 1, 65542, 393238, 1, 65542, 393239, 1, 65542, 393240, 1, 65542, 393241, 1, 65538 )

[node name="Back" parent="Tiles/Orange" instance=ExtResource( 5 )]
modulate = Color( 1, 0.529412, 0, 1 )
collision_layer = 0
collision_mask = 0
tile_data = PoolIntArray( -1048605, 2, 1, -1048604, 2, 327682, -1048603, 2, 5, -1048602, 2, 5, -1048601, 2, 5, -1048600, 2, 5, -1048599, 2, 5, -1048598, 2, 5, -1048597, 2, 5, -1048596, 2, 5, -1048595, 2, 5, -1048594, 2, 5, -1048593, 2, 5, -1048592, 2, 5, -1048591, 2, 5, -1048590, 2, 327682, -1048589, 2, 5, -1048588, 2, 5, -1048587, 2, 5, -1048586, 2, 5, -1048585, 2, 5, -1048584, 2, 5, -1048583, 2, 5, -1048582, 2, 5, -1048581, 2, 5, -1048580, 2, 5, -1048579, 2, 5, -1048578, 2, 5, -1048577, 2, 5, -1114112, 2, 5, -1114111, 2, 5, -1114110, 2, 5, -1114109, 2, 5, -1114108, 2, 5, -1114107, 2, 327682, -1114106, 2, 5, -1114105, 2, 5, -1114104, 2, 5, -1114103, 2, 5, -1114102, 2, 5, -1114101, 2, 5, -1114100, 2, 5, -1114099, 2, 5, -1114098, 2, 5, -1114097, 2, 5, -1114096, 2, 5, -1114095, 2, 5, -1114094, 2, 5, -1114093, 2, 5, -1114092, 2, 5, -1114091, 2, 5, -1114090, 2, 5, -1114089, 2, 5, -1114088, 2, 5, -1114087, 2, 262148, -983068, 2, 6, -983054, 2, 6, -1048571, 2, 6, -1048551, 2, 6, -917532, 2, 6, -917518, 2, 6, -983035, 2, 6, -983015, 2, 6, -851996, 2, 6, -851982, 2, 6, -917499, 2, 6, -917479, 2, 6, -786460, 2, 6, -786446, 2, 6, -851963, 2, 6, -851943, 2, 6, -720924, 2, 6, -720917, 2, 1, -720916, 2, 5, -720915, 2, 5, -720914, 2, 5, -720913, 2, 5, -720912, 2, 5, -720911, 2, 5, -720910, 2, 327681, -786427, 2, 6, -786407, 2, 6, -655388, 2, 262150, -655387, 2, 5, -655386, 2, 262148, -655374, 2, 6, -720891, 2, 6, -720871, 2, 6, -589850, 2, 6, -589843, 2, 4, -589838, 2, 2, -655355, 2, 6, -655340, 2, 1, -655339, 2, 5, -655338, 2, 5, -655337, 2, 5, -655336, 2, 5, -655335, 2, 327681, -524314, 2, 6, -524307, 2, 2, -524293, 2, 1, -524292, 2, 5, -524291, 2, 5, -524290, 2, 5, -524289, 2, 5, -589824, 2, 5, -589823, 2, 5, -589822, 2, 5, -589821, 2, 3, -589819, 2, 262150, -589818, 2, 5, -589817, 2, 5, -589816, 2, 5, -589815, 2, 5, -589814, 2, 5, -589813, 2, 5, -589812, 2, 5, -589811, 2, 5, -589810, 2, 262148, -589799, 2, 6, -458778, 2, 6, -524274, 2, 6, -524263, 2, 6, -393244, 2, 4, -393242, 2, 2, -458738, 2, 6, -458727, 2, 6, -327708, 2, 6, -393202, 2, 6, -393191, 2, 6, -262172, 2, 6, -262165, 2, 1, -262164, 2, 5, -262163, 2, 262148, -327666, 2, 6, -327655, 2, 6, -196636, 2, 6, -196627, 2, 262150, -196626, 2, 5, -196625, 2, 5, -196624, 2, 5, -196623, 2, 5, -196622, 2, 5, -196621, 2, 262148, -262130, 2, 2, -262119, 2, 6, -131100, 2, 6, -131085, 2, 6, -196583, 2, 6, -65564, 2, 6, -65555, 2, 4, -65549, 2, 2, -131047, 2, 6, -28, 2, 262150, -27, 2, 5, -26, 2, 262148, -19, 2, 2, -65511, 2, 6, 65510, 2, 6, 65531, 2, 1, 65532, 2, 5, 65533, 2, 5, 65534, 2, 5, 65535, 2, 5, 0, 2, 5, 1, 2, 5, 2, 2, 5, 3, 2, 5, 4, 2, 262148, 25, 2, 6, 131046, 2, 6, 65540, 2, 6, 65561, 2, 6, 196582, 2, 6, 131076, 2, 6, 131082, 2, 1, 131083, 2, 5, 131084, 2, 5, 131085, 2, 5, 131086, 2, 5, 131087, 2, 5, 131088, 2, 5, 131089, 2, 5, 131090, 2, 5, 131091, 2, 5, 131092, 2, 3, 131097, 2, 6, 262118, 2, 6, 262123, 2, 1, 262124, 2, 5, 262125, 2, 262148, 196612, 2, 6, 196633, 2, 6, 327654, 2, 6, 327661, 2, 262150, 327662, 2, 5, 327663, 2, 5, 327664, 2, 5, 327665, 2, 5, 327666, 2, 5, 327667, 2, 262148, 262148, 2, 6, 262169, 2, 6, 393190, 2, 6, 393203, 2, 6, 327684, 2, 6, 327705, 2, 6, 458726, 2, 2, 458739, 2, 2, 393220, 2, 2, 393241, 2, 2 )

[node name="Spikes" parent="Tiles/Orange" instance=ExtResource( 4 )]
modulate = Color( 1, 0.529412, 0, 1 )
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( -917485, -1073741824, 0, -851949, -1073741824, 0, -786413, -1073741824, 0, -589809, -1610612736, 0, -524273, -1610612736, 0, -393222, -1073741824, 0, -327686, -1073741824, 0, -393197, -1073741824, 0, -327661, -1073741824, 0, -196630, -1073741824, 0, -131094, -1073741824, 0, -131084, -1610612736, 0, -196598, 1610612736, 0, -196597, 1610612736, 0, -196596, 1610612736, 0, -196595, 1610612736, 0, -196594, 1610612736, 0, -65558, -1073741824, 0, -65548, -1610612736, 0, 131066, -1073741824, 0, 65541, -1610612736, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 196602, -1073741824, 0, 131077, -1610612736, 0, 262138, -1073741824, 0, 196613, -1610612736, 0, 196617, -1073741824, 0, 327655, -1610612736, 0, 327658, -1073741824, 0, 327674, -1073741824, 0, 262149, -1610612736, 0, 262153, -1073741824, 0, 393191, -1610612736, 0, 393194, -1073741824, 0, 393204, -1610612736, 0, 393210, -1073741824, 0, 327685, -1610612736, 0, 327689, -1073741824, 0, 458727, -1610612736, 0, 458730, -1073741824, 0, 458740, -1610612736, 0, 458746, -1073741824, 0, 393221, -1610612736, 0, 393225, -1073741824, 0, 720866, 0, 0, 720867, 0, 0, 720868, 0, 0, 720869, 0, 0, 720870, 0, 0, 720871, 0, 0, 720872, 0, 0, 720873, 0, 0, 720874, 0, 0, 720875, 0, 0, 720876, 0, 0, 720877, 0, 0, 720878, 0, 0, 720879, 0, 0, 720880, 0, 0, 720881, 0, 0, 720882, 0, 0, 720883, 0, 0, 720884, 0, 0, 720885, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0 )

[node name="AppearTile" parent="Tiles/Orange" instance=ExtResource( 8 )]
modulate = Color( 1, 0.529412, 0, 1 )
collision_layer = 0
collision_mask = 2147483648
tile_data = PoolIntArray( -851973, 2, 0, -851972, 2, 0, -786437, 2, 0, -786436, 2, 0, -720901, 2, 0, -720900, 2, 0, -655365, 2, 0, -655364, 2, 0, -589829, 2, 0, -589828, 2, 0 )

[node name="Button" parent="Tiles/Orange" instance=ExtResource( 11 )]
modulate = Color( 1, 0.529412, 0, 1 )
position = Vector2( 288, -320 )
collision_layer = 2
collision_mask = 2
tile_map_path = NodePath("../AppearTile")
layer_bit = 1
default_state = true

[node name="Purple" type="Node" parent="Tiles"]

[node name="Front" parent="Tiles/Purple" instance=ExtResource( 5 )]
modulate = Color( 0.85098, 0, 1, 1 )
collision_layer = 4
collision_mask = 4

[node name="Back" parent="Tiles/Purple" instance=ExtResource( 5 )]
modulate = Color( 0.85098, 0, 1, 1 )
collision_layer = 0
collision_mask = 0

[node name="Spikes" parent="Tiles/Purple" instance=ExtResource( 4 )]
modulate = Color( 0.85098, 0, 1, 1 )
collision_layer = 4
collision_mask = 4

[node name="AppearTile" parent="Tiles/Purple" instance=ExtResource( 8 )]
modulate = Color( 0.85098, 0, 1, 1 )
collision_layer = 0
collision_mask = 2147483648

[node name="White" type="Node" parent="Tiles"]

[node name="Front" parent="Tiles/White" instance=ExtResource( 5 )]
collision_layer = 7
collision_mask = 7

[node name="Back" parent="Tiles/White" instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 0

[node name="Spikes" parent="Tiles/White" instance=ExtResource( 4 )]
collision_layer = 7
collision_mask = 7

[node name="Enemies" type="Node" parent="."]

[node name="Blue" type="Node" parent="Enemies"]

[node name="Orange" type="Node" parent="Enemies"]

[node name="SmallOrangeDrone" parent="Enemies/Orange" instance=ExtResource( 12 )]
position = Vector2( -432, -136 )

[node name="SmallOrangeDrone2" parent="Enemies/Orange" instance=ExtResource( 12 )]
position = Vector2( -432, 112 )

[node name="Purple" type="Node" parent="Enemies"]

[node name="Portals" type="Node" parent="."]

[node name="Goal" parent="Portals" instance=ExtResource( 1 )]
position = Vector2( 0, -360 )
world_scene = "res://scenes/Levels/Level3.tscn"

[node name="HUDcanvas" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDcanvas" instance=ExtResource( 6 )]
visible = false

[node name="DialogueBox" parent="HUDcanvas" instance=ExtResource( 7 )]
dialogue_filepath = "res://data/dialogues/level2.json"

[node name="PauseMenu" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true
bus = "Musica"
[connection signal="dialogue_end" from="HUDcanvas/DialogueBox" to="." method="_on_DialogueBox_dialogue_end"]
[connection signal="dialogue_start" from="HUDcanvas/DialogueBox" to="." method="_on_DialogueBox_dialogue_start"]
